fix: Align navbar items

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,8 @@ p {
   }
   .nav__list {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: auto;
   }
 
